infra/k8s/overlays/stag/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cutline
spec:
  tls:
    - hosts:
        - cutline-stag.i.psilva.org
      secretName: cutline-stag-tls
  rules:
    - host: cutline-stag.i.psilva.org
